<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.Loginctivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/notice"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt"
        android:text="@string/Padding"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/img_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:src="@drawable/phone" />

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/img_3"
        android:padding="25dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@drawable/button_shape"
            android:hint="@string/keterangan1"
            android:paddingBottom="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email"
                >

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:passwordToggleEnabled="true"
            android:background="@drawable/button_shape"
            android:hint="@string/keterangan2"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                >

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
<LinearLayout
    android:id="@+id/ly_2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/ly_1"
    android:gravity="center">
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:background="@drawable/button_shape"
        android:text="@string/login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

    </com.google.android.gms.common.SignInButton>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ly_2"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#808080"
            android:text="@string/noakun"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:text="@string/register"
            android:textSize="17dp" />
    </LinearLayout>

</RelativeLayout>